# starneighbours

./: README.md  lint_and_test.sh  pyproject.toml
src/starneighbours/: auth.py  main.py
src/starneighbours/models/: api_token.py  github.py
src/starneighbours/repositories/: api.py  github.py  sqlite_api_token.py
src/starneighbours/services/: starneighbour.py
tests/: conftest.py  test_api.py  test_repository_github.py  test_service_starneighbour.py  test_sqlite_api_token.py
